# shunting-yard

./: CMakeLists.txt  Evaluator.cpp  Evaluator.hpp  LexicalAnalyzer.cpp  LexicalAnalyzer.hpp  Node.cpp  Node.hpp  NodeKind.cpp  NodeKind.hpp  OperatorAssoc.hpp  OperatorKind.cpp  OperatorKind.hpp  OperatorProperties.hpp  SyntaxAnalyzer.cpp  SyntaxAnalyzer.hpp  Token.cpp  Token.hpp  TokenKind.cpp  TokenKind.hpp  license.txt  main.cpp  readme.md
